fixed overflow title

--- a/webcompat/static/css/main.css
+++ b/webcompat/static/css/main.css
@@ -786,6 +786,7 @@ form .button {
   line-height: 1em;
   margin-bottom: .5em;
   padding: 0px 0px 0px .5em;
+  word-break: break-word;
 }
 .issue__title {
   display: inline-block;
